--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -79,8 +79,8 @@
 
         //Display 'Failed to call FHIR Service' if extractData failed
         function() {
-          $('#loading').hide();
-          $('#errors').html('<p> Failed to call FHIR Service </p>');
+          //$('#loading').hide();
+          //$('#errors').html('<p> Failed to call FHIR Service </p>');
         }
       );
     </script>
